project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Product2/fields/Lesson_Record__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson Record</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>