project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Product2/fields/Product_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Product_Suffix__c</fullName>
    <formula>CASE(Family,
&quot;Course&quot;,&quot;COU&quot;,
&quot;Textbook&quot;,&quot;TXT&quot;,
&quot;Tutoring&quot;,&quot;TUT&quot;,
&quot;Cheatsheet&quot;,&quot;CHS&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Suffix</label>
    <type>Text</type>
</CustomField>