project-2-the-force/theLanguageEmporium/force-app/main/default/objects/Product2/recordTypes/Dynamic_Product.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Product</fullName>
    <active>true</active>
    <label>Dynamic Product</label>
</RecordType>